<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:background="@color/nearly_white">

    <TextView
        android:id="@+id/lbl_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/lbl_title"
        android:layout_below="@+id/lbl_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/txt_title"
        android:hint="@string/hint_title"
        android:layout_below="@+id/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/lbl_content"
        android:layout_below="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content" />

    <EditText
        android:id="@+id/txt_content"
        android:hint="@string/hint_content"
        android:layout_below="@+id/lbl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/lbl_tags"
        android:layout_below="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tags" />

    <EditText
        android:id="@+id/txt_tags"
        android:hint="@string/hint_tags"
        android:layout_below="@+id/lbl_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/lbl_date_modified"
        android:layout_below="@id/txt_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic" />

<!--    <Button-->
<!--        android:id="@+id/btn_cancel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/lbl_date_modified"-->
<!--        android:layout_toStartOf="@+id/btn_save"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:text="@string/cancel" />-->

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_date_modified"
        android:layout_alignParentEnd="true"
        android:text="@string/save" />

</RelativeLayout>